Arregle la visualización y agrege carrusel al inicio

--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -2,91 +2,100 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <!-- BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- CSS -->
-    <link rel="stylesheet" href="../CSS/estilo.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto</title>
+  <!-- BOOTSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!-- CSS -->
+  <link rel="stylesheet" href="../CSS/estilo.css">
 </head>
 
 <body>
 
-    <header>
-        <h1>Contacto</h1>
+  <header>
+    <h1>Contacto</h1>
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="contacto.html">Contacto</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="misLibros.html">Mis libros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="noticias.html">Noticias</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="reseñas.html">Reseñas</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-
-    </header>
-
-
-
-    <main>
-        <form>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Aquiles Bailo">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Correo electronico</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="6" placeholder="Ingrese su mensaje..."></textarea>
-            </div>
-            <!-- Botón -->
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-              <button class="btn btn-primary me-md-2" type="button">Enviar</button>
-            </div>
-            
-            
-        </form>
-
-    </main>
-
-    <footer>
-        <p>Sitio creado por Diego Bustos</p>
-        <!-- icono whatsapp -->
-        <div class="social" >
-            <a href="https://api.whatsapp.com/send?phone=+569XXXXXXXX" >
-              <img class="logoW" src="../IMG/logo-whatsapp.png" alt="Logo de whatsapp"></a>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="misLibros.html">Mis libros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="noticias.html">Noticias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="reseñas.html">Reseñas</a>
+            </li>
+          </ul>
         </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+      </div>
+    </nav>
+
+  </header>
+
+
+
+  <main>
+    <form>
+
+      <!-- DIVISIÓN VERTICAL -->
+      <!-- <div class="d-flex" style="height: 200px;">
+        <div class="vr"></div>
+      </div> -->
+
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Aquiles Bailo">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Correo electronico</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"
+          placeholder="Ingrese su mensaje..."></textarea>
+      </div>
+
+      <!-- Botón -->
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+        <button class="btn btn-primary me-md-2" type="button">Enviar</button>
+      </div>
+
+
+    </form>
+
+
+
+
+  </main>
+
+  <footer>
+    <p>Sitio creado por Diego Bustos</p>
+    <!-- icono whatsapp -->
+    <div class="social">
+      <a href="https://api.whatsapp.com/send?phone=+569XXXXXXXX">
+        <img class="logoW" src="../IMG/logo-whatsapp.png" alt="Logo de whatsapp"></a>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
-
-
-
