--- a/index.html
+++ b/index.html
@@ -17,15 +17,34 @@
     <header>
 
         <h1>Bienvenido a Bookflip</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="HTML/contacto.html">Contacto</a></li>
-                <li><a href="HTML/misLibros.html">Mis libros</a></li>
-                <li><a href="HTML/noticias.html">Noticias</a></li>
-                <li><a href="HTML/reseñas.html">Reseñas</a></li>
-            </ul>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="./index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="./HTML/contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./HTML/misLibros.html">Mis libros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./HTML/noticias.html">Noticias</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./HTML/reseñas.html">Reseñas</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </nav>
+
 
   
 
@@ -34,6 +53,46 @@
 
 
     <main>
+
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./IMG/WH.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Warhammer 40K</h5>
+                  <p>Libro de literatura fantástica.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./IMG/srAnillosSlide.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
         <h2 class="titulo">Página Principal</h2>
         <p class="parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga aut saepe recusandae modi odio sunt voluptatum ad ullam ducimus suscipit hic, eligendi alias et architecto quasi illum reprehenderit maxime iste.
         Voluptatum ratione dolore ex nesciunt reiciendis maiores minima optio quisquam, iure assumenda debitis id, corporis ab blanditiis quos dicta alias nam reprehenderit laboriosam doloribus! Maxime, optio? Sed amet nulla ut.
