--- a/HTML/noticias.html
+++ b/HTML/noticias.html
@@ -15,7 +15,34 @@
     <header>
         <h1>Noticias</h1>
 
-        <nav>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="misLibros.html">Mis libros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="noticias.html">Noticias</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="reseñas.html">Reseñas</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+        <!-- <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
@@ -23,7 +50,7 @@
                 <li><a href="noticias.html">Noticias</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
 
     <main>
