Arregle el carrusel del index

--- a/index.html
+++ b/index.html
@@ -62,24 +62,24 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./IMG/WH.jpg" class="d-block w-100" alt="...">
+                <img src="./IMG/slideWh.jpg" class="d-block w-100" alt="Warhammer 40.000">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Warhammer 40K</h5>
                   <p>Libro de literatura fantástica.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./IMG/srAnillosSlide.jpg" class="d-block w-100" alt="...">
+                <img src="./IMG/slideAnillos.jpg" class="d-block w-100" alt="El anillo único sobre un mapa de la tierra media ">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>El señor de los anillos</h5>
+                  <p>Aventuras fantásticas en la tierra media.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="./IMG/SlideHP.jpg" class="d-block w-100" alt="Carta de Hogwarts">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Harry Potter</h5>
+                  <p>Mundos llenos de magia que huelen a infancia.</p>
                 </div>
               </div>
             </div>
