Terminado el index y avance con las noticias

--- a/HTML/noticias.html
+++ b/HTML/noticias.html
@@ -42,18 +42,20 @@
             </div>
           </nav>
 
-        <!-- <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="misLibros.html">Mis libros</a></li>
-                <li><a href="noticias.html">Noticias</a></li>
-                <li><a href="reseñas.html">Reseñas</a></li>
-            </ul>
-        </nav> -->
+
     </header>
 
     <main>
+
+      <div class="card mb-3">
+        <img src="../IMG/kindle.png" class="card-img-top" alt="Venta de libros creados por chatGPT">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+
         <h2>¡¡NOTICIA DE ULTIMO MINUTO!!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur itaque, pariatur perferendis sunt impedit iusto. Sunt, obcaecati, ea aliquam voluptatum sapiente cupiditate blanditiis hic est aliquid explicabo, eius atque?
         Tempore officia commodi repellendus nesciunt amet enim corrupti ex nobis distinctio, aliquid iusto sunt saepe itaque aliquam. Mollitia aliquid tenetur, illum commodi rerum adipisci sunt laborum minus minima omnis? Soluta.
