--- a/HTML/reseñas.html
+++ b/HTML/reseñas.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reseñas</title>
+    <title>Bookflip | Reseñas</title>
+        <!-- DESCRIPTION -->
+    <meta name="description"content="Comparte tus opiniones con otros o investiga sobre libros que empezar a leer. ">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- BOOTSTRAP -->
