--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookflip | Inicio</title>
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="libros,  foros de opinión, comunidad literaria">
+    <!-- DESCRIPTION -->
+    <meta name="description" content="Página enfocada a las personas que gusten de sentarse a leer un buen libro y compartir sus opiniones con otros. ">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
