--- a/HTML/misLibros.html
+++ b/HTML/misLibros.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mis Libros</title>
+    <title>Bookflip | Mis Libros</title>
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- DESCRIPTION -->
+    <meta name="description" content="Comparte y muestra tu avance con los libros que ya has leído o los que ya terminaste. ">
     <!-- CSS -->
     <link rel="stylesheet" href="../CSS/estilo.css">
 </head>
