--- a/HTML/contacto.html
+++ b/HTML/contacto.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bookflip | Contacto</title>
-    <!-- DESCRIPTION -->
-  <meta name="description"content="Ante dudas o acotaciones envíanos un mensaje para saber en qué podemos ayudarte. ">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="../IMG/bookflip_favicon.svg" type="image/x-icon">
+  <!-- DESCRIPTION -->
+  <meta name="description" content="Ante dudas o acotaciones envíanos un mensaje para saber en qué podemos ayudarte. ">
   <!-- BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
