--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookflip | Inicio</title>
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="./IMG/bookflip_favicon.svg" type="image/x-icon">
     <!-- KEYWORDS -->
     <meta name="keywords" content="libros,  foros de opinión, comunidad literaria">
     <!-- DESCRIPTION -->
