Correcciones con responsive, nombres con espacios y botón submit en las reseñas

--- a/HTML/misLibros.html
+++ b/HTML/misLibros.html
@@ -55,9 +55,7 @@
 
     <main>
         <h2>Libros</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quisquam obcaecati neque ducimus, dicta
-            voluptates hic sint commodi exercitationem necessitatibus dignissimos eveniet consequatur. Ipsum quo,
-            consequuntur molestias blanditiis totam facere.</p>
+        <p>En esta sección podrás compartir tus recomendaciones de lectura. Comenta si estás leyendo algún libro interesante, si hay alguno que quieres leer o si ya terminaste alguno que te haya dejado una gran impresión. ¡Compartamos nuestra pasión por los libros!</p>
 
         <div class="table-responsive">
             <table class="table">
@@ -87,7 +85,7 @@
                         <td><input type="checkbox" name="libro2">Por leer</td>
                     </tr>
                     <tr>
-                        <td><img src="../IMG/La fundacion.jpg"></td>
+                        <td><img src="../IMG/La-fundacion.jpg"></td>
                         <td>La fundación</td>
                         <td>Dan Abnett</td>
                         <td><input type="checkbox" name="libro3">Leído</td>
@@ -95,7 +93,7 @@
                         <td><input type="checkbox" name="libro3">Por leer</td>
                     </tr>
                     <tr>
-                        <td><img src="../IMG/La santa.jpg"></td>
+                        <td><img src="../IMG/La-santa.jpg"></td>
                         <td>La santa</td>
                         <td>Dan Abnett</td>
                         <td><input type="checkbox" name="libro4">Leído</td>
