--- a/HTML/reseñas.html
+++ b/HTML/reseñas.html
@@ -64,6 +64,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -77,6 +78,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -89,6 +91,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -102,6 +105,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -114,6 +118,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -127,6 +132,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -139,6 +145,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -152,6 +159,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -164,6 +172,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -177,6 +186,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -189,6 +199,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -202,6 +213,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -214,6 +226,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -227,6 +240,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -239,6 +253,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -252,6 +267,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -264,6 +280,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -277,6 +294,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -289,6 +307,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
@@ -302,6 +321,7 @@
                 <div class="input-group">
                     <textarea class="form-control" placeholder="Reseña del libro"></textarea>
                 </div>
+                <input class="btn btn-primary" type="submit" value="Publicar">
             </div>
 
             <div class="text-success">
