--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
           <div class="scroll-box__content">
             <div class="scroll-box__item"><img src="./IMG/portada-1.jpg" alt="Libro de Sherlock Holmes"></div>
             <div class="scroll-box__item"><img src="./IMG/Papillon.jpg" alt="Libro Papillon"></div>
-            <div class="scroll-box__item"><img src="./IMG/La fundacion.jpg" alt="Libro La fundación"> </div>
-            <div class="scroll-box__item"><img src="./IMG/Cronicas marcianas.jpg" alt="Libro Cronicas marcianas"> </div>
+            <div class="scroll-box__item"><img src="./IMG/La-fundacion.jpg" alt="Libro La fundación"> </div>
+            <div class="scroll-box__item"><img src="./IMG/Cronicas-marcianas.jpg" alt="Libro Cronicas marcianas"> </div>
             <div class="scroll-box__item"><img src="./IMG/HarryPotter.jpg" alt="Libro Harry Potter"></div>
             <div class="scroll-box__item"><img src="./IMG/Horus.jpg" alt="Libro de Warhammer"></div>
             <div class="scroll-box__item"><img src="./IMG//portada-4.jpg" alt="Libro de Sherlock Holmes"></div>
